# PupuriumR

./: Cargo.toml  README.md  build.bat  build.rs  com.github.res.pupurium_r.json
src/: lib.rs
