[package]
name = "pupurium_r"
version = "0.0.1"
authors = [ "evshiron", "Diberium" ]
links = "CQP"
build = "build.rs"

[dependencies]
winapi = "*"
user32-sys = "*"
encoding = "=0.2.32"

[dependencies.cqpsdk]
git = "https://github.com/doylecnn/cqpsdk-rust"

[lib]
name = "pupurium_r"
crate-type = [ "dylib" ]

