[package]

name = "pupurium_r"
version = "0.1.0"
authors = [ "evshiron", "Diberium" ]
links = "CQP"
build = "build.rs"

[dependencies]
winapi = "*"
user32-sys = "*"
encoding = "*"

[dependencies.cqpsdk]
git = "https://github.com/evshiron/cqpsdk-rust"

[lib]

name = "pupurium_r"
crate-type = [ "dylib" ]

